Fri Dec  5 19:16:08 GMT 2003 (njh)
----------------------------------
  * clamav-milter: Added call to umask to ensure that the local socket
	is not publically writeable. If it is sendmail
	will (correctly!) refuse to start this program
	Thanks for Nicklaus Wicker <n.wicker@cnk-networks.de>

	Don't sent From as the first line since that means
	clamd will think it is an mbox and not handle
	unescaped From at the start of lines properly
	Thanks to Michael Dankov <misha@btrc.ru>

Fri Dec  5 09:34:44 GMT 2003 (njh)
----------------------------------
  * libclamav: Use cli_tok instead of strtok - replaced now by cli_strtok

Fri Dec  5 02:31:24 CET 2003 (tk)
---------------------------------
  * clamav-milter: Makefile: link against libclamav (needed for cli_strtok())
		   Problem reported by Troy and solved by Thomas Lamy.

Wed Dec  3 22:03:19 CET 2003 (tk)
---------------------------------
  * libclamav: cli_scandir(): fixed a recursive loop (a wrong file argument
	       was passed to the recursive call but fortunately this function
	       is only used with with one level directories). Bug found by
	       Tomasz Klim <tomek*euroneto.pl>.

Tue Dec  2 23:41:04 CET 2003 (tk)
---------------------------------
  * New fixes from Thomas Lamy <Thomas.Lamy*in-online.net>:
    + configure.in: check for memcpy()
    + libclamav:
      + cli_strtok(): more generic replacement for tok() and cli_tok()
      + cli_enqueue(): return CL_EMEM on malloc problems
      + cli_maketrans(): return cli_enqueue()s result
      + cl_buildtrie(): same
    + clamd:
      + fixed memleaks in config file parsing
      + replaced tok() with new and more general cli_strtok() in libclamav
      + check return value of cl_buildtrie()
    + clamscan:
      + more than one filename may be given on cmdline
      + check return value of cl_buildtrie()
      + opt->filename cleanup
    + examples/ex1.c: check return value of cl_buildtrie()