@@ -45,6 +45,7 @@ Nicholas M. Kirsch <nick*kirsch.org>
 Robbert Kouprie <robbert*exx.nl>
 Thomas Lamy <Thomas.Lamy*in-online.net>
 Peter N Lewis <peter*stairways.com.au>
+David S. Madole <david*madole.net>
 Mark Mielke <mark*mark.mielke.cc>
 Arkadiusz Miskiewicz <misiek*pld.org.pl>
 Hendrik Muhs <Hendrik.Muhs*student.uni-magdeburg.de>
